SCG_update_home-page
home page layout was updated, links on all pages were verified and updated

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4066,6 +4066,23 @@
 #msg-box3-b0 .mbr-header .mbr-header__subtext {
   text-align: center;
 }
+#msg-box4-b1 .mbr-header__text {
+  color: #ffffff;
+}
+#msg-box4-b1 .mbr-header__subtext {
+  color: #ffffff;
+}
+#msg-box4-b1 .mbr-article {
+  color: #ffffff;
+}
+#slider-97 H1 {
+  color: #ffffff;
+  text-align: center;
+}
+#slider-97 P {
+  color: #ffffff;
+  text-align: center;
+}
 #features1-95 .mbr-section-title .mbr-header__text {
   text-align: center;
   font-size: 36px;
@@ -4075,14 +4092,6 @@
   text-align: center;
   font-size: 16px;
   color: #222222;
-}
-#slider-97 H1 {
-  color: #ffffff;
-  text-align: center;
-}
-#slider-97 P {
-  color: #ffffff;
-  text-align: center;
 }
 #contacts2-98 DIV {
   color: #ffffff;
@@ -4140,6 +4149,23 @@
 #msg-box3-az .mbr-header .mbr-header__subtext {
   text-align: center;
 }
+#msg-box4-b3 .mbr-header__text {
+  color: #ffffff;
+}
+#msg-box4-b3 .mbr-header__subtext {
+  color: #ffffff;
+}
+#msg-box4-b3 .mbr-article {
+  color: #ffffff;
+}
+#slider-90 H1 {
+  color: #ffffff;
+  text-align: center;
+}
+#slider-90 P {
+  color: #ffffff;
+  text-align: center;
+}
 #features1-8y .mbr-section-title .mbr-header__text {
   text-align: center;
   font-size: 36px;
@@ -4149,14 +4175,6 @@
   text-align: center;
   font-size: 16px;
   color: #222222;
-}
-#slider-90 H1 {
-  color: #ffffff;
-  text-align: center;
-}
-#slider-90 P {
-  color: #ffffff;
-  text-align: center;
 }
 #contacts2-91 DIV {
   color: #ffffff;
