SCG_text_home-page
changed color of text on home page

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4067,13 +4067,13 @@
   text-align: center;
 }
 #msg-box4-b1 .mbr-header__text {
-  color: #ffffff;
+  color: #efefef;
 }
 #msg-box4-b1 .mbr-header__subtext {
   color: #ffffff;
 }
 #msg-box4-b1 .mbr-article {
-  color: #ffffff;
+  color: #efefef;
 }
 #slider-97 H1 {
   color: #ffffff;
@@ -4150,13 +4150,13 @@
   text-align: center;
 }
 #msg-box4-b3 .mbr-header__text {
-  color: #ffffff;
+  color: #efefef;
 }
 #msg-box4-b3 .mbr-header__subtext {
   color: #ffffff;
 }
 #msg-box4-b3 .mbr-article {
-  color: #ffffff;
+  color: #efefef;
 }
 #slider-90 H1 {
   color: #ffffff;
