SCG_travel_grant_news
News updated to include travel grant awarded to Adem

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4075,6 +4075,9 @@
 #msg-box4-b1 .mbr-article {
   color: #efefef;
 }
+#content4-b4 P {
+  text-align: center;
+}
 #features1-95 .mbr-section-title .mbr-header__text {
   text-align: center;
   font-size: 36px;
@@ -4149,6 +4152,9 @@
 }
 #msg-box4-b3 .mbr-article {
   color: #efefef;
+}
+#content4-b5 P {
+  text-align: center;
 }
 #features1-8y .mbr-section-title .mbr-header__text {
   text-align: center;
