summer 2023 team members
added Alexis to team members page

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3996,6 +3996,9 @@
 #features1-7i P {
   text-align: center;
 }
+#features1-b6 P {
+  text-align: center;
+}
 #content4-9q P {
   text-align: center;
   color: #ffffff;
